# -

./: .gitignore  J  README.md  docker-compose.yml  pKcScan.py  pyproject.toml  testFile.py
core/data/config/: config.py
core/initialize/: color.py  flag.py  globals.py  mongoConnect.py  printf.py  system.py
module/: jsonC.py
module/Poc/: OreadPocJson.py  Template.json  char_injection.py  execUPoc.py  fingerprint.py  handlePoc.py  loadPoc.py
module/Poc/pikachu/: updatesql注入.json  xx型sql注入.json
module/Poc/pikachuPoc/: SqlInject-1.json  SqlInject-3.json  Template.json  deletesql注入.json  搜索型sql注入.json
module/Report/: 20240527_100240.md
module/fingerprint/: Template.json
module/fingerprint/allFingerprint/: indexpikachu.json  rcepikachu.json
module/utils/: fingerprint.py  ipScan.py  sql_scanner.py
pkcscan/: app.py
test/: poc.json  test.py
utils/: banner.py  fingerprint.py  ipScan.py
vulnerabilities/sql_injection/: sql_scanner.py
